Se agrega funcionalidad JS para mostrar y agregar productos al alura geek, se arregla botón de eliminar en cards

--- a/main.css
+++ b/main.css
@@ -69,6 +69,18 @@ padding:1rem;
     padding:1rem;
 }
 
+.delete-button{
+    background:none;
+    border:none;
+width:3rem;
+height:3rem;
+margin-top: .8rem;
+}
+
+.delete_img {
+object-fit: cover;
+    }
+
 /* FORMULARIO */
 
 .add h1{
