--- a/main.css
+++ b/main.css
@@ -44,8 +44,13 @@ background-color: forestgreen;
 padding:1rem;
 margin:2rem;
 width: 40vw;
-
+border-radius: 5px;;
 }
+
+.add_btn:hover{
+    background-color: #2cb42c;
+    font-size:medium;
+    }
 
 .products {
     display: flex;
@@ -54,7 +59,6 @@ width: 40vw;
 
 .products h1 {
     display: flex;
-    width: 100%;
     justify-content: center;
     font-size: 2rem;
     padding: 2rem;
