--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 html {
     margin: 0px;
     padding: 0px;
-    width: 100;
+    width: 100%;
 }
 
 body {
@@ -32,42 +32,49 @@ header {
 
 .supergrid {
     display: flex;
-    flex:1;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
 }
 
 .add_btn {
-color:white;
-background-color: forestgreen;
-padding:1rem;
-margin:2rem;
-width: 40vw;
-border-radius: 5px;;
+    color: white;
+    background-color: forestgreen;
+    padding: 1rem;
+    margin: 2rem;
+    width: 40vw;
+    border-radius: 8px;
+    text-align: center;
+    border: none;
+    transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.2s ease;
+    cursor: pointer;
 }
 
-.add_btn:hover{
+.add_btn:hover {
     background-color: #2cb42c;
-    font-size:medium;
-    }
-
-.products {
-    display: flex;
-    flex-direction: column;
+    transform: scale(1.05);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    font-size: medium;
 }
+
+.add_btn:active {
+    transform: scale(0.98);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
 
 .products h1 {
     display: flex;
     justify-content: center;
-    font-size: 2rem;
+    font-size: 3rem;
     padding: 2rem;
 }
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
+    display: grid;
+    width: 80vw;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-auto-rows: minmax(300px, auto);
+    gap: 3rem;
     padding: 1rem;
 }
 
@@ -78,8 +85,10 @@ border-radius: 5px;;
     flex-direction: column;
     align-content: center;
     text-align: center;
-    flex: 200px;
-    height: auto;
+    width: 100%;
+    /* Se ajusta al ancho del grid */
+    min-height: 250px;
+    height: 100%;
     border: 1px solid #000000;
     border-radius: 2rem;
     color: white;
@@ -87,9 +96,14 @@ border-radius: 5px;;
 
 .card_img {
     width: 100%;
-    height: 10rem;
+    height: 350px;
     object-fit: cover;
     border-radius: 2rem;
+}
+
+.card-container-info {
+    flex-grow: 1;
+    padding-top: 2rem;
 }
 
 .card-container-value {
@@ -103,14 +117,49 @@ border-radius: 5px;;
     border: none;
     width: 3rem;
     height: 3rem;
-    margin-top: .8rem;
+}
+
+.delete-button:hover {
+    cursor: pointer;
+    transform: scale(1.10);
+}
+
+.delete-button:active {
+    cursor: pointer;
+    transform: scale(0.90);
 }
 
 .delete_img {
     object-fit: cover;
 }
 
+
 /* FORMULARIO */
+
+.inicio_btn {
+    color: white;
+    background-color: forestgreen;
+    padding: 1rem;
+    margin: 2rem;
+    width: 10vw;
+    border-radius: 8px;
+    text-align: center;
+    border: none;
+    transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.2s ease;
+    cursor: pointer;
+}
+
+.inicio_btn:hover {
+    background-color: #2cb42c;
+    transform: scale(1.05);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    font-size: medium;
+}
+
+.inicio_btn:active {
+    transform: scale(0.98);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+}
 
 .add {
     display: flex;
@@ -119,8 +168,8 @@ border-radius: 5px;;
     justify-content: center;
     align-items: center;
     font-size: 2rem;
-    padding: 2rem;
-    margin-top: 4.5rem;
+    padding: 1rem;
+    margin: 0;
 }
 
 .add h1 {
@@ -129,7 +178,7 @@ border-radius: 5px;;
 }
 
 .formulario {
-    width: 80%;
+    width: 60%;
 }
 
 .form-group {
@@ -145,6 +194,7 @@ border-radius: 5px;;
 
 input {
     width: 90%;
+    height:2rem;
     border-radius: 2rem;
 }
 
@@ -192,9 +242,7 @@ p {
         font-size: 1.5rem;
     }
 
-    .supergrid {
-        
-    }
+    .supergrid {}
 
     .products {
         order: 1
